[package]
name = "boatctl"
version = "0.1.0"
edition = "2021"
authors = ["Heyang Zhou <zhy20000919@hotmail.com>"]
description = "CLI for Blueboat Cloud."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1.19.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11.11", features = ["json"] }
graphql_client = "0.11.0"
miette = { version = "5.1.0", features = ["fancy"] }
toml = "0.5.9"
indexmap = { version = "1.9.1", features = ["serde"] }
regex = "1.5.6"
structopt = "0.3.26"
dirs = "4.0.0"
ed25519-dalek = "1"
data-encoding = "2.3.2"
maplit = "1"
tabled = "0.7.0"
termcolor = "1.1.3"
tempdir = "0.3.7"
cfg-if = "1"
tar = "0.4"
